// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly when fullWidth & required props are falsy 1`] = `
<div>
  <div
    class="sc-gsTCUz fnsRrG"
    placeholder="Enter Email Address"
    type="email"
  >
    <div
      class="sc-hKgILt jpuMkQ"
    >
      <input
        class="sc-eCssSg gnQvOb"
        id="input"
        placeholder="Enter Email Address"
        type="email"
      />
    </div>
  </div>
</div>
`;

exports[`Input should render correctly when it is disabled 1`] = `
<div>
  <div
    class="sc-gsTCUz fnsRrG"
    id="email-input"
    placeholder="Enter Email Address"
    type="text"
  >
    <div
      class="sc-hKgILt jpuMkQ"
    >
      <input
        class="sc-eCssSg jsHIOX"
        disabled=""
        id="email-input"
        placeholder="Enter Email Address"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Input should render correctly with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz fnsRrG"
    id="email-input"
    placeholder="Enter Email Address"
    prefix="www."
    type="email"
  >
    <div
      class="sc-hKgILt fxOLGw"
    >
      <input
        class="sc-eCssSg gnQvOb"
        id="email-input"
        placeholder="Enter Email Address"
        prefix="www."
        required=""
        type="email"
      />
      <span
        class="sc-gKsewC cwjetH"
      >
        .com
      </span>
    </div>
  </div>
</div>
`;
